...
    });
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: CustomAppBar(titleAppBar: 'Configurações'),
      body: ListView(
        padding: const EdgeInsets.all(16.0),
        children: [
          _buildSectionHeader('Conta'),
          _buildAccountListTile(),
          const Divider(),
...
    );
  }

  Widget _buildAccountListTile() {
    return ListTile(
      leading: const Icon(Icons.person),
      title: const Text('Meus Dados'),
      trailing: const Icon(Icons.chevron_right),
      onTap: () {
        Get.toNamed(AppRoutes.myDataPage);
      },
    );
  }
...
